--- a/java/org/mule/module/getsatisfaction/config/GetTopicByCompanyDefinitionParser.html
+++ b/java/org/mule/module/getsatisfaction/config/GetTopicByCompanyDefinitionParser.html
@@ -185,6 +185,10 @@
     <li class="selected api apilevel-">
   <a href="../../../../../../java/org/mule/module/getsatisfaction/config/package-summary.html">org.mule.module.getsatisfaction.config</a></li>
     <li class="api apilevel-">
+  <a href="../../../../../../java/org/mule/module/getsatisfaction/model/package-summary.html">org.mule.module.getsatisfaction.model</a></li>
+    <li class="api apilevel-">
+  <a href="../../../../../../java/org/mule/module/getsatisfaction/model/transformers/package-summary.html">org.mule.module.getsatisfaction.model.transformers</a></li>
+    <li class="api apilevel-">
   <a href="../../../../../../java/org/mule/module/getsatisfaction/processors/package-summary.html">org.mule.module.getsatisfaction.processors</a></li>
     <li class="api apilevel-">
   <a href="../../../../../../java/org/mule/module/getsatisfaction/transformers/package-summary.html">org.mule.module.getsatisfaction.transformers</a></li>
@@ -197,6 +201,8 @@
               
     <li><h2>Classes</h2>
       <ul>
+          <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/config/CreateReplyForTopicDefinitionParser.html">CreateReplyForTopicDefinitionParser</a></li>
+          <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/config/CreateTopicAtCompanyDefinitionParser.html">CreateTopicAtCompanyDefinitionParser</a></li>
           <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/config/GetProductsByCompanyDefinitionParser.html">GetProductsByCompanyDefinitionParser</a></li>
           <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/config/GetRepliesByTopicDefinitionParser.html">GetRepliesByTopicDefinitionParser</a></li>
           <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/config/GetRepliesByUserDefinitionParser.html">GetRepliesByUserDefinitionParser</a></li>
