--- a/java/org/mule/module/getsatisfaction/config/package-summary.html
+++ b/java/org/mule/module/getsatisfaction/config/package-summary.html
@@ -186,6 +186,10 @@
     <li class="selected api apilevel-">
   <a href="../../../../../../java/org/mule/module/getsatisfaction/config/package-summary.html">org.mule.module.getsatisfaction.config</a></li>
     <li class="api apilevel-">
+  <a href="../../../../../../java/org/mule/module/getsatisfaction/model/package-summary.html">org.mule.module.getsatisfaction.model</a></li>
+    <li class="api apilevel-">
+  <a href="../../../../../../java/org/mule/module/getsatisfaction/model/transformers/package-summary.html">org.mule.module.getsatisfaction.model.transformers</a></li>
+    <li class="api apilevel-">
   <a href="../../../../../../java/org/mule/module/getsatisfaction/processors/package-summary.html">org.mule.module.getsatisfaction.processors</a></li>
     <li class="api apilevel-">
   <a href="../../../../../../java/org/mule/module/getsatisfaction/transformers/package-summary.html">org.mule.module.getsatisfaction.transformers</a></li>
@@ -198,6 +202,8 @@
               
     <li><h2>Classes</h2>
       <ul>
+        <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/config/CreateReplyForTopicDefinitionParser.html">CreateReplyForTopicDefinitionParser</a></li>
+        <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/config/CreateTopicAtCompanyDefinitionParser.html">CreateTopicAtCompanyDefinitionParser</a></li>
         <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/config/GetProductsByCompanyDefinitionParser.html">GetProductsByCompanyDefinitionParser</a></li>
         <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/config/GetRepliesByTopicDefinitionParser.html">GetRepliesByTopicDefinitionParser</a></li>
         <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/config/GetRepliesByUserDefinitionParser.html">GetRepliesByUserDefinitionParser</a></li>
@@ -281,6 +287,14 @@
     <div class="jd-sumtable">
     
   <table class="jd-sumtable-expando">
+        <tr class="alt-color api apilevel-" >
+              <td class="jd-linkcol"><a href="../../../../../../java/org/mule/module/getsatisfaction/config/CreateReplyForTopicDefinitionParser.html">CreateReplyForTopicDefinitionParser</a></td>
+              <td class="jd-descrcol" width="100%">&nbsp;</td>
+          </tr>
+        <tr class=" api apilevel-" >
+              <td class="jd-linkcol"><a href="../../../../../../java/org/mule/module/getsatisfaction/config/CreateTopicAtCompanyDefinitionParser.html">CreateTopicAtCompanyDefinitionParser</a></td>
+              <td class="jd-descrcol" width="100%">&nbsp;</td>
+          </tr>
         <tr class="alt-color api apilevel-" >
               <td class="jd-linkcol"><a href="../../../../../../java/org/mule/module/getsatisfaction/config/GetProductsByCompanyDefinitionParser.html">GetProductsByCompanyDefinitionParser</a></td>
               <td class="jd-descrcol" width="100%">&nbsp;</td>
