--- a/java/org/mule/module/getsatisfaction/processors/GetProductsByCompanyMessageProcessor.html
+++ b/java/org/mule/module/getsatisfaction/processors/GetProductsByCompanyMessageProcessor.html
@@ -184,6 +184,10 @@
   <a href="../../../../../../java/org/mule/module/getsatisfaction/adapters/package-summary.html">org.mule.module.getsatisfaction.adapters</a></li>
     <li class="api apilevel-">
   <a href="../../../../../../java/org/mule/module/getsatisfaction/config/package-summary.html">org.mule.module.getsatisfaction.config</a></li>
+    <li class="api apilevel-">
+  <a href="../../../../../../java/org/mule/module/getsatisfaction/model/package-summary.html">org.mule.module.getsatisfaction.model</a></li>
+    <li class="api apilevel-">
+  <a href="../../../../../../java/org/mule/module/getsatisfaction/model/transformers/package-summary.html">org.mule.module.getsatisfaction.model.transformers</a></li>
     <li class="selected api apilevel-">
   <a href="../../../../../../java/org/mule/module/getsatisfaction/processors/package-summary.html">org.mule.module.getsatisfaction.processors</a></li>
     <li class="api apilevel-">
@@ -197,6 +201,8 @@
               
     <li><h2>Classes</h2>
       <ul>
+          <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/CreateReplyForTopicMessageProcessor.html">CreateReplyForTopicMessageProcessor</a></li>
+          <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/CreateTopicAtCompanyMessageProcessor.html">CreateTopicAtCompanyMessageProcessor</a></li>
           <li class="selected api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/GetProductsByCompanyMessageProcessor.html">GetProductsByCompanyMessageProcessor</a></li>
           <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/GetRepliesByTopicMessageProcessor.html">GetRepliesByTopicMessageProcessor</a></li>
           <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/GetRepliesByUserMessageProcessor.html">GetRepliesByUserMessageProcessor</a></li>
