--- a/java/org/mule/module/getsatisfaction/processors/package-summary.html
+++ b/java/org/mule/module/getsatisfaction/processors/package-summary.html
@@ -185,6 +185,10 @@
   <a href="../../../../../../java/org/mule/module/getsatisfaction/adapters/package-summary.html">org.mule.module.getsatisfaction.adapters</a></li>
     <li class="api apilevel-">
   <a href="../../../../../../java/org/mule/module/getsatisfaction/config/package-summary.html">org.mule.module.getsatisfaction.config</a></li>
+    <li class="api apilevel-">
+  <a href="../../../../../../java/org/mule/module/getsatisfaction/model/package-summary.html">org.mule.module.getsatisfaction.model</a></li>
+    <li class="api apilevel-">
+  <a href="../../../../../../java/org/mule/module/getsatisfaction/model/transformers/package-summary.html">org.mule.module.getsatisfaction.model.transformers</a></li>
     <li class="selected api apilevel-">
   <a href="../../../../../../java/org/mule/module/getsatisfaction/processors/package-summary.html">org.mule.module.getsatisfaction.processors</a></li>
     <li class="api apilevel-">
@@ -198,6 +202,8 @@
               
     <li><h2>Classes</h2>
       <ul>
+        <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/CreateReplyForTopicMessageProcessor.html">CreateReplyForTopicMessageProcessor</a></li>
+        <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/CreateTopicAtCompanyMessageProcessor.html">CreateTopicAtCompanyMessageProcessor</a></li>
         <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/GetProductsByCompanyMessageProcessor.html">GetProductsByCompanyMessageProcessor</a></li>
         <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/GetRepliesByTopicMessageProcessor.html">GetRepliesByTopicMessageProcessor</a></li>
         <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/GetRepliesByUserMessageProcessor.html">GetRepliesByUserMessageProcessor</a></li>
@@ -280,20 +286,28 @@
     
   <table class="jd-sumtable-expando">
         <tr class="alt-color api apilevel-" >
+              <td class="jd-linkcol"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/CreateReplyForTopicMessageProcessor.html">CreateReplyForTopicMessageProcessor</a></td>
+              <td class="jd-descrcol" width="100%">CreateReplyForTopicMessageProcessor invokes the <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html#createReplyForTopic(java.lang.String, org.mule.module.getsatisfaction.model.Reply)">createReplyForTopic(java.lang.String, org.mule.module.getsatisfaction.model.Reply)</a></code> method in <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html">GetSatisfactionConnector</a></code>.&nbsp;</td>
+          </tr>
+        <tr class=" api apilevel-" >
+              <td class="jd-linkcol"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/CreateTopicAtCompanyMessageProcessor.html">CreateTopicAtCompanyMessageProcessor</a></td>
+              <td class="jd-descrcol" width="100%">CreateTopicAtCompanyMessageProcessor invokes the <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html#createTopicAtCompany(java.lang.String, org.mule.module.getsatisfaction.model.Topic)">createTopicAtCompany(java.lang.String, org.mule.module.getsatisfaction.model.Topic)</a></code> method in <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html">GetSatisfactionConnector</a></code>.&nbsp;</td>
+          </tr>
+        <tr class="alt-color api apilevel-" >
               <td class="jd-linkcol"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/GetProductsByCompanyMessageProcessor.html">GetProductsByCompanyMessageProcessor</a></td>
               <td class="jd-descrcol" width="100%">GetProductsByCompanyMessageProcessor invokes the <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html#getProductsByCompany(java.lang.String)">getProductsByCompany(java.lang.String)</a></code> method in <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html">GetSatisfactionConnector</a></code>.&nbsp;</td>
           </tr>
         <tr class=" api apilevel-" >
               <td class="jd-linkcol"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/GetRepliesByTopicMessageProcessor.html">GetRepliesByTopicMessageProcessor</a></td>
-              <td class="jd-descrcol" width="100%">GetRepliesByTopicMessageProcessor invokes the <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html#getRepliesByTopic(java.lang.String, org.mule.module.getsatisfaction.ReplyFilterCriteria, java.lang.Boolean)">getRepliesByTopic(java.lang.String, org.mule.module.getsatisfaction.ReplyFilterCriteria, java.lang.Boolean)</a></code> method in <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html">GetSatisfactionConnector</a></code>.&nbsp;</td>
+              <td class="jd-descrcol" width="100%">GetRepliesByTopicMessageProcessor invokes the <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html#getRepliesByTopic(java.lang.String, org.mule.module.getsatisfaction.model.ReplyFilterCriteria, java.lang.Boolean)">getRepliesByTopic(java.lang.String, org.mule.module.getsatisfaction.model.ReplyFilterCriteria, java.lang.Boolean)</a></code> method in <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html">GetSatisfactionConnector</a></code>.&nbsp;</td>
           </tr>
         <tr class="alt-color api apilevel-" >
               <td class="jd-linkcol"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/GetRepliesByUserMessageProcessor.html">GetRepliesByUserMessageProcessor</a></td>
-              <td class="jd-descrcol" width="100%">GetRepliesByUserMessageProcessor invokes the <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html#getRepliesByUser(java.lang.String, org.mule.module.getsatisfaction.ReplyFilterCriteria, java.lang.Boolean)">getRepliesByUser(java.lang.String, org.mule.module.getsatisfaction.ReplyFilterCriteria, java.lang.Boolean)</a></code> method in <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html">GetSatisfactionConnector</a></code>.&nbsp;</td>
+              <td class="jd-descrcol" width="100%">GetRepliesByUserMessageProcessor invokes the <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html#getRepliesByUser(java.lang.String, org.mule.module.getsatisfaction.model.ReplyFilterCriteria, java.lang.Boolean)">getRepliesByUser(java.lang.String, org.mule.module.getsatisfaction.model.ReplyFilterCriteria, java.lang.Boolean)</a></code> method in <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html">GetSatisfactionConnector</a></code>.&nbsp;</td>
           </tr>
         <tr class=" api apilevel-" >
               <td class="jd-linkcol"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/GetRepliesMessageProcessor.html">GetRepliesMessageProcessor</a></td>
-              <td class="jd-descrcol" width="100%">GetRepliesMessageProcessor invokes the <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html#getReplies(org.mule.module.getsatisfaction.ReplyFilterCriteria, java.lang.Boolean)">getReplies(org.mule.module.getsatisfaction.ReplyFilterCriteria, java.lang.Boolean)</a></code> method in <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html">GetSatisfactionConnector</a></code>.&nbsp;</td>
+              <td class="jd-descrcol" width="100%">GetRepliesMessageProcessor invokes the <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html#getReplies(org.mule.module.getsatisfaction.model.ReplyFilterCriteria, java.lang.Boolean)">getReplies(org.mule.module.getsatisfaction.model.ReplyFilterCriteria, java.lang.Boolean)</a></code> method in <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html">GetSatisfactionConnector</a></code>.&nbsp;</td>
           </tr>
         <tr class="alt-color api apilevel-" >
               <td class="jd-linkcol"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/GetTopicByCompanyMessageProcessor.html">GetTopicByCompanyMessageProcessor</a></td>
@@ -313,7 +327,7 @@
           </tr>
         <tr class="alt-color api apilevel-" >
               <td class="jd-linkcol"><a href="../../../../../../java/org/mule/module/getsatisfaction/processors/GetTopicsMessageProcessor.html">GetTopicsMessageProcessor</a></td>
-              <td class="jd-descrcol" width="100%">GetTopicsMessageProcessor invokes the <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html#getTopics(java.lang.String, org.mule.module.getsatisfaction.SortCriteria, org.mule.module.getsatisfaction.Style, java.lang.Long, java.lang.String, java.util.List<java.lang.String>, java.lang.String, java.util.List<org.mule.module.getsatisfaction.Status>, java.util.List<java.lang.String>)">getTopics(java.lang.String, org.mule.module.getsatisfaction.SortCriteria, org.mule.module.getsatisfaction.Style, java.lang.Long, java.lang.String, java.util.List, java.lang.String, java.util.List, java.util.List)</a></code> method in <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html">GetSatisfactionConnector</a></code>.&nbsp;</td>
+              <td class="jd-descrcol" width="100%">GetTopicsMessageProcessor invokes the <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html#getTopics(java.lang.String, org.mule.module.getsatisfaction.model.SortCriteria, org.mule.module.getsatisfaction.model.Style, java.lang.Long, java.lang.String, java.util.List<java.lang.String>, java.lang.String, java.util.List<org.mule.module.getsatisfaction.model.Status>, java.util.List<java.lang.String>)">getTopics(java.lang.String, org.mule.module.getsatisfaction.model.SortCriteria, org.mule.module.getsatisfaction.model.Style, java.lang.Long, java.lang.String, java.util.List, java.lang.String, java.util.List, java.util.List)</a></code> method in <code><a href="../../../../../../java/org/mule/module/getsatisfaction/GetSatisfactionConnector.html">GetSatisfactionConnector</a></code>.&nbsp;</td>
           </tr>
   </table>
     </div>
