--- a/java/org/mule/module/getsatisfaction/transformers/SortCriteriaEnumTransformer.html
+++ b/java/org/mule/module/getsatisfaction/transformers/SortCriteriaEnumTransformer.html
@@ -185,6 +185,10 @@
     <li class="api apilevel-">
   <a href="../../../../../../java/org/mule/module/getsatisfaction/config/package-summary.html">org.mule.module.getsatisfaction.config</a></li>
     <li class="api apilevel-">
+  <a href="../../../../../../java/org/mule/module/getsatisfaction/model/package-summary.html">org.mule.module.getsatisfaction.model</a></li>
+    <li class="api apilevel-">
+  <a href="../../../../../../java/org/mule/module/getsatisfaction/model/transformers/package-summary.html">org.mule.module.getsatisfaction.model.transformers</a></li>
+    <li class="api apilevel-">
   <a href="../../../../../../java/org/mule/module/getsatisfaction/processors/package-summary.html">org.mule.module.getsatisfaction.processors</a></li>
     <li class="selected api apilevel-">
   <a href="../../../../../../java/org/mule/module/getsatisfaction/transformers/package-summary.html">org.mule.module.getsatisfaction.transformers</a></li>
@@ -201,6 +205,12 @@
           <li class="selected api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/transformers/SortCriteriaEnumTransformer.html">SortCriteriaEnumTransformer</a></li>
           <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/transformers/StatusEnumTransformer.html">StatusEnumTransformer</a></li>
           <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/transformers/StyleEnumTransformer.html">StyleEnumTransformer</a></li>
+          <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/transformers/TransformJsonToProductsTransformer.html">TransformJsonToProductsTransformer</a></li>
+          <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/transformers/TransformJsonToRepliesTransformer.html">TransformJsonToRepliesTransformer</a></li>
+          <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/transformers/TransformJsonToTopicsTransformer.html">TransformJsonToTopicsTransformer</a></li>
+          <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/transformers/TransformJsonToTopicTransformer.html">TransformJsonToTopicTransformer</a></li>
+          <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/transformers/TransformReplyToJsonTransformer.html">TransformReplyToJsonTransformer</a></li>
+          <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/getsatisfaction/transformers/TransformTopicToJsonTransformer.html">TransformTopicToJsonTransformer</a></li>
       </ul>
     </li>
               
